--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   *-]
   ~>>[<[->+<]>>]
   <~<~[-~+~]
-~<]</textarea><br><button id="submit">Submit</button><button id="step">Step</button><button id="run">Run</button><button id="run2">Run without timeouts</button> Timeout: <input id="timeout" type="number" value="50">
+~<]</textarea><br><button id="submit">Submit</button><button id="step">Step</button><button id="run">Run</button><button id="run2">Run without timeouts</button> Timeout: <input id="timeout" type="number" value="50"> Optimize: <input id="optimize" type="checkbox">
 <h2>Code representation</h2>
 <div id="action"></div>
 <h2>Output</h2>
